--- a/index.html
+++ b/index.html
@@ -140,4 +140,4 @@
         <p>All images provided for free use via <a href="https://unsplash.com/">Unsplash.com</a> whose generous <a href="https://unsplash.com/license">license details can be found here</a>.</p>
     </footer>
 </body>
-</html>
+</html>.
